Due to unforseen Github issues, the original entry can now be found under gcremers/metascan-old

1.1

* Updated dependency check
  Only dependencies that are needed are checked
* The BLASTn directory is redirected correctly
